Formatting -- fixed spacing issues

--- a/team-goose-app/src/components/LogEvents.css
+++ b/team-goose-app/src/components/LogEvents.css
@@ -1,7 +1,12 @@
 .log-events-container {
   display: grid;
-  grid-template-rows: 2fr 5fr;
-  margin: 10px;
+  grid-template-rows: 7fr 13fr;
+  padding: 10px;
+  height: 100%;
+}
+
+html, body {
+  height: 100%;
 }
 
 .log-events-filters {
@@ -10,6 +15,13 @@
 }
 
 .dropdown-group {
-  width: 40%;
+  max-width: 550px;
+  display: flex;
+  justify-content: space-evenly;
   flex-flow: row wrap;
+}
+
+.log-events-table-container {
+  height: 100%;
+  width: 100%;
 }
